-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0.19, 5.5, 10.1, 10.0
-
Component/s: Data Manipulation - Subquery, Optimizer
-
Labels:None
-
Environment:CentOS6.6
-
Sprint:5.5.55
Any pointers in debugging?
This is what I see in the error log:
160115 15:31:15 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
To report this bug, see http://kb.askmonty.org/en/reporting-bugs
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
Server version: 10.0.19-MariaDB-log
|
key_buffer_size=134217728
|
read_buffer_size=1048576
|
max_used_connections=4
|
max_threads=501
|
thread_count=2
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 1177387 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
Thread pointer: 0x0x7fa841866008
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7fa82cbfecd8 thread_stack 0x48000
|
mysys/stacktrace.c:247(my_print_stacktrace)[0xbca37e]
|
sql/signal_handler.cc:153(handle_fatal_signal)[0x71fe5c]
|
/lib64/libpthread.so.0[0x344740f710]
|
sql/sql_lex.cc:3945(st_select_lex::update_correlated_cache())[0x5875b5]
|
sql/sql_lex.cc:3505(st_select_lex::optimize_unflattened_subqueries(bool))[0x589553]
|
sql/opt_subselect.cc:4972(JOIN::optimize_unflattened_subqueries())[0x6a8ff2]
|
sql/sql_select.cc:1782(JOIN::optimize_inner())[0x5ebc8e]
|
sql/sql_select.cc:1035(JOIN::optimize())[0x5edb92]
|
sql/sql_select.cc:373(handle_select(THD*, LEX*, select_result*, unsigned long))[0x5f195d]
|
sql/sql_parse.cc:5275(execute_sqlcom_select)[0x5957d0]
|
sql/sql_parse.cc:2562(mysql_execute_command(THD*))[0x598427]
|
sql/sql_parse.cc:6529(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x59f866]
|
sql/sql_parse.cc:1310(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x5a1797]
|
sql/sql_parse.cc:999(do_command(THD*))[0x5a1ed9]
|
sql/threadpool_common.cc:233(threadpool_process_request(THD*))[0x6b6798]
|
sql/threadpool_unix.cc:1448(handle_event)[0x6f3818]
|
perfschema/pfs.cc:1863(pfs_spawn_thread)[0xa83f49]
|
/lib64/libpthread.so.0[0x34474079d1]
|
/lib64/libc.so.6(clone+0x6d)[0x34470e8b6d]
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7fa82a820020): SELECT A.IMORY_ID, A.NUMBER, A.NAME, DATE_FORMAT(A.DATETIME, '%Y-%m-%d') AS TARGET_DATE, SUM( CASE WHEN A.DATA_TYPE='1' THEN 1 ELSE 0 END) AS CALL_CNT, SUM( CASE WHEN A.DATA_TYPE IN ('2', '3') THEN 1 ELSE 0 END) AS SMS_CNT, SUM(CAST(A.DURATION AS INT)) AS DURATION, (SELECT COUNT(*) FROM TB_DIARY_TOTAL_DAY WHERE IMORY_ID=A.IMORY_ID AND NUMBER=A.NUMBER AND NAME=A.NAME AND DATETIME = DATE_FORMAT(A.DATETIME, '%Y-%m-%d')) STATS_COUNT FROM TB_DIARY A WHERE A.IMORY_ID = 55094102 AND A.DATETIME LIKE (SELECT CONCAT (DATE_FORMAT(DATETIME, '%Y-%m-%d') ,'%') FROM TB_DIARY WHERE IMORY_ID=55094102 AND DIARY_SEQ IN ( 608351221, 608351225, 608351229 ) group by DATE_FORMAT(DATETIME, '%Y-%m-%d') ) GROUP BY A.IMORY_ID, A.NUMBER, A.NAME, DATE_FORMAT(A.DATETIME, '%Y-%m-%d')
|
Connection ID (thread ID): 5635152
|
Status: NOT_KILLED
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on
|
|
The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
|
information that should help you find out what is causing the crash.
|
160115 15:31:16 mysqld_safe Number of processes running now: 0
|